--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
 	"dependencies": {
 		"@supabase/supabase-js": "^2.21.0",
 		"lucide-svelte": "^0.176.0",
-		"svelte-toast": "^1.0.0"
+		"sharp": "^0.32.1",
+		"svelte-toast": "^1.0.0",
+		"uuid": "^9.0.0"
 	}
 }
