--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@supabase/auth-helpers-sveltekit": "^0.9.4",
 		"@supabase/supabase-js": "^2.21.0",
 		"base64-arraybuffer": "^1.0.2",
+		"esbuild": "0.17.19",
 		"lucide-svelte": "^0.176.0",
 		"sharp": "^0.32.1",
 		"svelte-toast": "^1.0.0",
