--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@floating-ui/dom": "^1.2.8",
 		"@supabase/auth-helpers-sveltekit": "^0.9.4",
 		"@supabase/supabase-js": "^2.21.0",
 		"base64-arraybuffer": "^1.0.2",
